# jupytools

./: .gitignore  makefile  pyproject.toml  requirements.txt
jnb/: demo.ipynb
src/: __init__.py  gpt.py  ipy.py  paint.py  search.py  visualize.py
